fix script reference html

--- a/Kelompok Kolega/informations_and_facilities_Muhammad Rifki Anandita/index.html
+++ b/Kelompok Kolega/informations_and_facilities_Muhammad Rifki Anandita/index.html
@@ -96,14 +96,14 @@
           <tbody id="equipmentTable">
             <tr>
               <td>Treadmill</td>
-              <td>
+              <td class="aksi">
                 <button class="edit">Edit</button>
                 <button class="delete">Hapus</button>
               </td>
             </tr>
             <tr>
               <td>Treadmill</td>
-              <td>
+              <td class="aksi">
                 <button class="edit">Edit</button>
                 <button class="delete">Hapus</button>
               </td>
@@ -114,7 +114,7 @@
     </section>
   </main>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
